# SoapyQS1R

./: CMakeLists.txt  FindLIBUSB.cmake  LICENSE  QS1R_Registration.cpp  QS1R_Session.cpp  QS1R_Settings.cpp  QS1R_Streaming.cpp  QS1R_Streaming2.cpp  QS1R_Utilities.cpp  README.md  SoapyQS1R.hpp  librtlsdr_mod.c
firmware/: qs1r_firmware_11022011.hex
original/: qs_io.py  qs_io3.py
original/ExtIO_qs1r/: ExtIO_qs1r.cbproj  ExtIO_qs1r.cbproj.local  dllmain.cpp  qs_io_libusb.cpp  qs_io_libusb.h  qsform.cpp  qsform.dfm  qsform.h  qsform_control.cpp  qsform_control.dfm  qsform_control.h  qsform_wait.cpp  qsform_wait.dfm  qsform_wait.h
original/ExtIO_qs1r/__history/: ExtIO_qs1r.cbproj.local.~1~  dllmain.cpp.~62~  dllmain.cpp.~63~  dllmain.cpp.~64~  dllmain.cpp.~65~  dllmain.cpp.~66~  dllmain.cpp.~67~  dllmain.cpp.~68~  dllmain.cpp.~69~  dllmain.cpp.~70~  dllmain.cpp.~71~  qs_io_libusb.c.~1~  qs_io_libusb.c.~2~  qs_io_libusb.c.~3~  qs_io_libusb.cpp.~26~  qs_io_libusb.cpp.~27~  qs_io_libusb.cpp.~28~  qs_io_libusb.cpp.~29~  qs_io_libusb.cpp.~30~  qs_io_libusb.cpp.~31~  qs_io_libusb.cpp.~32~  qs_io_libusb.cpp.~33~  qs_io_libusb.cpp.~34~  qs_io_libusb.cpp.~35~  qs_io_libusb.h.~12~  qs_io_libusb.h.~13~  qs_io_libusb.h.~14~  qs_io_libusb.h.~15~  qs_io_libusb.h.~16~  qs_io_libusb.h.~17~  qs_io_libusb.h.~18~  qs_io_libusb.h.~20~  qs_io_libusb.h.~21~  qsform.cpp.~50~  qsform.cpp.~51~  qsform.cpp.~52~  qsform.cpp.~53~  qsform.cpp.~54~  qsform.cpp.~55~  qsform.cpp.~56~  (+21 more)
original/ExtIO_qs1r/libusb/: libusb_b.lib
original/ExtIO_qs1r/libusb/unix/: usb.h
udev/: 10-qs1r.rules
